# marki

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs
